# seed-keeper

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: rust.yml
crates/seed-keeper-core/: Cargo.toml  LICENSE  README.md
crates/seed-keeper-core/src/: credentials.rs  error.rs  lib.rs  seed.rs  wrap.rs
crates/seed-keeper-events/: Cargo.toml  README.md
crates/seed-keeper-events/src/: lib.rs
crates/seed-keeper-utils/: Cargo.toml  README.md
crates/seed-keeper-utils/src/: events.rs
crates/seed-keeper-wallet/: Cargo.toml  README.md
crates/seed-keeper-wallet/src/: bindings.rs  lib.rs
crates/seed-keeper-wallet/tests/: mod.rs
crates/seed-keeper-wallet/wit/: world.wit
crates/seed-keeper-wit/: Cargo.toml  rust-toolchain.toml
crates/seed-keeper-wit-ui/: Cargo.toml  README.md  justfile  output.css  tailwind.config.js
crates/seed-keeper-wit-ui/src/: bindings.rs  events.rs  input.rs  lib.rs  output.rs  page.rs  utils.rs
crates/seed-keeper-wit-ui/src/templates/: index.html  input.html  output.html  page.html
crates/seed-keeper-wit-ui/wit/: in.wit  index.wit  out.wit  types.wit  world.wit  wurbo.wit
crates/seed-keeper-wit/src/: lib.rs
crates/seed-keeper-wit/tests/: mod.rs
crates/seed-keeper-wit/tests/fixtures/: deterministic.json
crates/seed-keeper-wit/wit/: types.wit  world.wit
crates/seed-site/: Cargo.toml  README.md  Trunk.toml  index.html  rust-toolchain.toml
crates/seed-site/.cargo/: config.toml
crates/seed-site/src/: main.rs
examples/: aggregate.wasm  composed-wallet.wasm
examples/crates/aggregate-wit-ui/: Cargo.toml  README.md  config.yml  justfile
examples/crates/aggregate-wit-ui/src/: bindings.rs  lib.rs
examples/crates/aggregate-wit-ui/src/templates/: output.html  page.html
examples/crates/aggregate-wit-ui/tests/: mod.rs
examples/crates/aggregate-wit-ui/wit/: in.wit  out.wit  types.wit  world.wit
examples/crates/calculator/: Cargo.toml  README.md  config.yml
examples/crates/calculator/src/: bindings.rs  lib.rs
examples/crates/calculator/wit/: world.wit
examples/crates/edwards-ui/: Cargo.toml
examples/crates/edwards-ui/src/: bindings.rs  input.rs  lib.rs  output.rs  page.rs
examples/crates/edwards-ui/src/templates/: input.html  output.html
examples/crates/edwards-ui/wit/: in.wit  out.wit  world.wit
examples/crates/edwards-wit/: Cargo.toml  README.md
examples/crates/edwards-wit/src/: bindings.rs  lib.rs
examples/crates/edwards-wit/tests/: mod.rs
examples/crates/edwards-wit/wit/: world.wit
examples/crates/math/: Cargo.toml
examples/crates/math/src/: bindings.rs  lib.rs
examples/crates/math/wit/: world.wit
examples/edwards-wit/: Cargo.toml
examples/edwards-wit/tests/: mod.rs
examples/edwards-wit/wit/: world.wit
examples/sveltekit/: README.md  package-lock.json  package.json  svelte.config.js
examples/sveltekit/src/: app.css
examples/sveltekit/src/lib/: Aggregate.svelte  Calculator.svelte  Edwards.svelte  Seed.svelte  index.js
examples/sveltekit/src/routes/: +page.svelte  importables.js
tests/: mod.rs
