[workspace]
members = ["crates/*", "examples/crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["DougAnderson444"]
description = "Tools for working with crypto seeds."

[workspace.dependencies]
seed-keeper-core = { path = "crates/seed-keeper-core" }
seed-keeper-events = { path = "crates/seed-keeper-events" }
bitflags = "2.5.0"
wit-bindgen-rt = "0.24.0"
wurbo = "0.3.2"

[package]
name = "seed-keeper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generate and encrypt crypto seeds using Argon2 and AES Key Encryption Keys"

[dependencies]
seed-keeper-core = { workspace = true }

# Optimize for small code size for release builds
[profile.release]
codegen-units = 1        # allow for maximum size reduction optimizations
debug = false
debug-assertions = false
incremental = false
lto = true               # Enable Link Time Optimization
opt-level = 'z'          # Optimize for size
overflow-checks = false
panic = 'abort'          # Abort on panic
rpath = false
strip = true             # Automatically strip symbols from the binary.
