[package]
authors = ["Doug Anderson <douganderson444@peerpiper.io>"]
categories = ["cryptography", "security"]
description = "Generate and encrypt crypto seeds using Argon2 and AES Key Encryption Keys"
documentation = "https://docs.rs/seed-keeper-core"
edition = "2021"
homepage = "https://github.com/DougAnderson444/seed-keeper"
license = "MIT"
name = "seed-keeper-core"
readme = "README.md"
repository = "https://github.com/DougAnderson444/seed-keeper.git"
version = "0.3.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-kw = { version = "0.2.1", features = ["std"] }
argon2 = "0.5.0"
zeroize = { version = "1.3.0", features = ["zeroize_derive"] }
rand = "0.8.5"
thiserror = "1.0.51"
