[package]
name = "seed-keeper-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# optional but default dependencies
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0.107", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
