[package]
name = "seed-keeper-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
seed-keeper-core = { workspace = true }

[dev-dependencies]
wasmtime = { version = "18", features = ['component-model'] }
wasmtime-wasi = "18.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "seed-keeper:wallet"

[package.metadata.component.dependencies]
