[package]
name = "seed-keeper-wit-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = { workspace = true }
wurbo = "0.1.9" 
base64ct = { version = "1.6.0", features = ["alloc"] }

# optional but default dependencies
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0.107", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[package.metadata.component]
package = "seed-keeper:wit-ui"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"seed-keeper:wallet" = { path = "../seed-keeper-wallet/wit" } 
