[package]
name = "seed-keeper-wit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = { workspace = true }
seed-keeper-core = { workspace = true }

[dev-dependencies]
wasmtime = { version = "16", features = ['component-model'] }
wasmtime-wasi = "16.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:seed-keeper-wit"

[package.metadata.component.dependencies]
