[package]
edition = "2021"
name = "seed-site"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.10", features = ["csr", "nightly"] }

[package.metadata.leptos]
lib-profile-release = "wasm-release"
