[package]
name = "aggregate-wit-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = { workspace = true }
wurbo = "0.1.7"
minijinja = { version = "1.0.10" }

[dev-dependencies]
wasmtime = { version = "16", features = ['component-model'] }
wasmtime-wasi = "16.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wallet:aggregate-wit-ui"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"seed-keeper:wit-ui" = { path = "../../../crates/seed-keeper-wit-ui/wit" }
"example:edwards-ui" = { path = "../edwards-ui/wit" }

"seed-keeper:edwards-wit" = { path = "wit/deps/edwards" }
"seed-keeper:wallet" = { path = "../../../crates/seed-keeper-wallet/wit" } 
