[package]
name = "aggregate-wit-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
wurbo = { workspace = true }
minijinja = { version = "1.0.12", features = ["json", "loader"] }

[dev-dependencies]
wasmtime = { version = "18", features = ['component-model'] }
wasmtime-wasi = "18.0"
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wallet:aggregate-wit-ui"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"seed-keeper:wit-ui" = { path = "wit/deps/seed-keeper-ui" }
"example:edwards-ui" = { path = "wit/deps/edwards-ui" }
"seed-keeper:edwards-wit" = { path = "wit/deps/edwards" }
"seed-keeper:wallet" = { path = "wit/deps/wallet" } 
