[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { workspace = true }
wit-bindgen-rt = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:calculator"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"component:math" = { path = "../math/wit/deps/math" }
