[package]
name = "edwards-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.5.0"
wurbo = "0.1.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:edwards-ui"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"component:edwards" = { path = "../edwards-wit/wit/deps/edwards" }
"component:wurbo" = { path = "wit/deps/wurbo" }
