[package]
name = "edwards-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
wurbo = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "example:edwards-ui"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"seed-keeper:edwards-wit" = { path = "wit/deps/edwards-wit" }
"seed-keeper:wallet" = { path = "wit/deps/wallet" }
