[package]
name = "edwards-wit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cargo-component-bindings = { workspace = true }
ed25519-dalek = "2.1"

[dev-dependencies]
wasmtime = { version = "16", features = ['component-model'] }
wasmtime-wasi = "16"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.component]
package = "seed-keeper:edwards-wit"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
# For some reason, the link below doesn't work fully, so we still need to copy the deps to
# ./wit/deps/wallet in ADDITION to the link below. 
"seed-keeper:wallet" = { path = "wit/deps/wallet" }
