[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:math"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"component:math" = { path = "wit/deps/math" }
